Fix width of the map on mobile plus links inside and height of the map.

--- a/src/app/shared/components/map/map.component.scss
+++ b/src/app/shared/components/map/map.component.scss
@@ -1,7 +1,21 @@
 @import 'node_modules/@eui/styles/src/styles/eui-dev-only';
 
+#map {
+    height: 480px;
+    z-index: 0;
+
+    @include media($eui-bkp-mobile-up) {
+        height: 680px; 
+    }
+}
+
+#map-inside {
+    height: 600px;
+}
+
 .map-container {
     position: relative;
+
     .map-navigation {
         display: flex;
         position: absolute;
@@ -11,6 +25,7 @@
         right: 30px;
         min-height: 52px;
         justify-content: space-between;
+
         .left {
             padding: 10px;
             background-color: white;
@@ -29,11 +44,13 @@
     flex-wrap: wrap;
     align-items: center;
     padding: 10px;
+
     ux-button{
         margin-left: 5px;
         margin-bottom: 5px;
     }
 }
+
 .regionWrapper {
     display: flex;
     flex-direction: column;
@@ -55,14 +72,10 @@
         max-height: 300px;
         max-width: 200px;
 
-        border: 1px solid red;
-
         @include media($eui-bkp-mobile-up) {
             width: auto !important;
             min-width: 300px;
             max-width: 100%;
-
-            border: 1px solid green;
         }
     }
 }
