--- a/src/styles.scss
+++ b/src/styles.scss
@@ -143,11 +143,6 @@
     margin-bottom: 50px;
 }
 
-#map {
-    height: 680px;
-    z-index: 0;
-}
-
 .leaflet-cluster-anim .leaflet-marker-icon, .leaflet-cluster-anim .leaflet-marker-shadow {
     -webkit-transition: -webkit-transform 0.3s ease-out, opacity 0.3s ease-in;
     -moz-transition: -moz-transform 0.3s ease-out, opacity 0.3s ease-in;
@@ -279,10 +274,6 @@
 .map-frame, .map-container {
     width:100%;
     height: 100%;
-}
-
-#map-inside {
-    height: 600px;
 }
 
 .without-obcjetive-id {
